--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,5 @@ services:
       # 指定时区
       - TZ="Asia/Shanghai"
     container_name: ctpn6852-server
+    command: ["pip","install","--upgrade","pip"]
+    command: ["pip","install","flask"]
