feat:docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,6 @@ services:
       # 指定时区
       - TZ="Asia/Shanghai"
     container_name: ctpn6852-server
-    command: ["pip","install","--upgrade","pip"]
-    command: ["pip","install","flask"]
+    command:
+     - pip install --upgrade pip
+     - pip install flask
