--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,8 @@ services:
       - TZ="Asia/Shanghai"
     container_name: ctpn6852-server
     command:
-      - pip install --upgrade pip
-      - pip install flask
+      - sh
+      - -c
+      - |
+        pip install --upgrade pip
+        pip install flask
