feat:docker-compose

--- a/base-docker/Dockerfile
+++ b/base-docker/Dockerfile
@@ -1,3 +1,3 @@
 FROM python:2.7.14
 MAINTAINER neo
-RUN pip install --upgrade pip && pip install flask
+RUN pip install --upgrade pip && pip install flask && pip install uwsgi
