--- a/base-docker/Dockerfile
+++ b/base-docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM python:2.7.14
 MAINTAINER neo
-COPY ./pip.conf ~/.pip/pip.conf
-#RUN pip install --upgrade pip && pip install flask && pip install uwsgi
+COPY ./pip.conf /root/.pip/pip.conf
+RUN pip install --upgrade pip && pip install flask && pip install uwsgi
