--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,5 @@ services:
     container_name: ctpn6852-server
     volumes:
       - ./CTPN6852:/CTPN6852
+    working_dir: /CTPN6852/api/
+    command: ["uwsgi","--ini","ctpn6852.ini"]
