--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   ctpn6852-server:
     image: ctpn6852/python:2.7.14
     ports:
-    - "6852:6852"
+    - "6853:6853"
     stdin_open: true #后台运行
     tty: true #后台运行
     privileged: true #用友真正的root权限
@@ -15,4 +15,4 @@ services:
     volumes:
       - ./CTPN6852:/CTPN6852
     working_dir: /CTPN6852/api/
-    command: ["uwsgi","--ini","ctpn6852.ini"]
+    command: ["uwsgi","--ini","ctpn6852.ini","-h","0.0.0.0","-p","6853"]
