--- a/base-docker/Dockerfile
+++ b/base-docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM python:2.7.14
 MAINTAINER neo
 COPY ./pip.conf /root/.pip/pip.conf
-RUN pip install --upgrade pip && pip install flask flask_migrate flask_script flask_restful flask_login numpy pandas flasgger uwsgi
+RUN pip install --upgrade pip && pip install flask flask_migrate flask_script flask_restful flask_login numpy pandas flasgger uwsgi && apt-get update && apt-get install nginx
