--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3'
 services:
   ctpn6852-server:
     image: ctpn6852/python:2.7.14
-    ports:
-    - "6853:6853"
+#    ports:
+#    - "6853:6853"
     stdin_open: true #后台运行
     tty: true #后台运行
     privileged: true #用友真正的root权限
@@ -17,10 +17,10 @@ services:
     working_dir: /CTPN6852/api/
 #    command: ["uwsgi","--ini","ctpn6852.ini"]
   ctpn6852-nginx:
-        image: nginx  #需要nginx镜像，所以最好在本地事先生成一个nginx镜像
+        image: ctpn6852/nginx:1.16.1  #需要nginx镜像，所以最好在本地事先生成一个nginx镜像
         volumes:
-            - ./nginx.conf:/etc/nginx/conf.d/default.conf  #做配置映射
+            - ./nginx-docker/ctpn6852.conf:/etc/nginx/conf.d/ctpn6852.conf  #做配置映射
         depends_on:
-            - webapp   #依赖webapp
+            - ctpn6852-server   #依赖webapp
         ports:
-            - "8888:80"
+            - "6853:80"
