--- a/nginx-docker/ctpn6852.conf
+++ b/nginx-docker/ctpn6852.conf
@@ -3,6 +3,6 @@ server {
     server_name 0.0.0.0;
     location / {
         include uwsgi_params;
-        uwsgi_pass webapp:8002;
+        uwsgi_pass ctpn6852-server:8002;
     }
 }
