--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,8 @@ services:
     volumes:
       - ./CTPN6852:/CTPN6852
     working_dir: /CTPN6852/api/
-    depends_on: ctpn6852-postgres
+    depends_on:
+      - ctpn6852-postgres
 #    command: ["uwsgi","--ini","ctpn6852.ini"]
   ctpn6852-nginx:
     image: ctpn6852/nginx:1.16.1  #需要nginx镜像，所以最好在本地事先生成一个nginx镜像
