--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,9 @@ services:
       - /bin/sh
       - -c
       - |
-        python run.py db init
-        python run.py db migrate
+        python main.py db init
+        python main.py db migrate
+        python main.py db upgrade
         uwsgi --ini ctpn6852.ini
   ctpn6852-nginx:
     image: ctpn6852/nginx:1.16.1  #需要nginx镜像，所以最好在本地事先生成一个nginx镜像
