--- a/nginx-docker/ctpn6852.conf
+++ b/nginx-docker/ctpn6852.conf
@@ -5,4 +5,8 @@ server {
         include uwsgi_params;
         uwsgi_pass ctpn6852-server:8002;
     }
+    location /apidocs {
+        include uwsgi_params;
+        uwsgi_pass ctpn6852-server:8002;
+    }
 }
