--- a/nginx-docker/ctpn6852.conf
+++ b/nginx-docker/ctpn6852.conf
@@ -9,4 +9,6 @@ server {
         include uwsgi_params;
         uwsgi_pass ctpn6852-server:8002;
     }
+    access_log /logs/access.log;
+    error_log  /logs/error.log;
 }
