--- a/nginx-docker/ctpn6852.conf
+++ b/nginx-docker/ctpn6852.conf
@@ -1,11 +1,10 @@
 server {
     listen 80;
     server_name 0.0.0.0;
-    location / {
-        include uwsgi_params;
-        uwsgi_pass ctpn6852-server:8002;
-    }
     location /apidocs {
+        proxy_pass ctpn6852-server:8002;
+    }
+    location / {
         include uwsgi_params;
         uwsgi_pass ctpn6852-server:8002;
     }
