--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
         python main.py db migrate
         python main.py db upgrade
         uwsgi --ini ctpn6852.ini
+    ports:
+      - "8002:8002"
   ctpn6852-nginx:
     image: ctpn6852/nginx:1.16.1  #需要nginx镜像，所以最好在本地事先生成一个nginx镜像
     volumes:
